Fixed some layout issues.

--- a/static/common.css
+++ b/static/common.css
@@ -44,7 +44,7 @@ hr {border:1px solid #C5CBD4;}
 input, select, textarea {font:1em Verdana, Helvetica, sans-serif;}
 div#wrapper {text-align:left; background:#fff url(none) repeat-y; width:948px; margin: 0 auto;}
 div#header {width:948px; height:80px; margin:0; padding:0;}
-div#logo {width:301px; margin:20px 0 0 10px; float:left;}
+div#logo {width:201px; margin:10px 0 0 10px; float:left;}
 html>body div#logo {margin-left:20px;}
 div#nav{
 	width: auto;
@@ -59,17 +59,22 @@ div#nav{
 html>body div#nav {margin-top:20px;}
 div#nav2 {
 	width: auto;
-	margin:0 0 0 500px;
+	margin:0 0 0 450px;
 	font-family: "Arial", Verdana, Helvetica, sans-serif;
 	font-weight:normal;
 	font-size:.9em;
 	height:20px;
 }
-div#nav ul, div#nav2 ul{
+div#nav ul {
 	margin:0;
 	padding: 0;
 	font-size:1.2em;
-	}
+}
+div#nav2 ul{
+	margin:0;
+	padding: 0;
+	font-size:1.2em;
+}
 div#nav li, div#nav2 li{
 	margin:0;
 	padding:0 0 0 20px;
